--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="table"></div>
+    <script src="main.js"></script>
 </body>
+
 </html>
