--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>99乘法表建置</h1>
     <div id="table"></div>
     <script src="main.js"></script>
 </body>
